删除项目中的vue改为cdn引入,更改html title

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="zh-Hans">
 
 <head>
 	<meta charset="UTF-8">
-	<title>vue todo</title>
+	<title>vue-todolist</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="bootstrap-3.3.7.css">
 	<link rel="stylesheet" href="todolist.css">
@@ -75,7 +75,7 @@
 			</table>
 		</div>
 	</div>
-	<script src="vue.js" type="text/javascript"></script>
+	<script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
 	<script src="todolist.js" type="text/javascript"></script>
 	<script>
 		var vm = new Vue({
